# PyOEIS3

./: .gitignore  README.md  meson.build  pyproject.toml
PyOEIS/: __init__.py  client.py  meson.build  regex.py  sequence.py
